fixed overflow y

--- a/styles.css
+++ b/styles.css
@@ -648,7 +648,6 @@ body {
     
     html {
         overflow-x: hidden;
-        overflow-y: hidden;
     }
 
     .title {
